# spond_attendance

./: .gitignore  CLAUDE.md  README.md  dashboard.py  pyproject.toml
.claude/commands/: attendance-report.md
.claude/hooks/: lint-python.sh
.github/workflows/: ci.yml
dashboard/: app.py
data/: spond_attendance_apr_24.xlsx  spond_attendance_apr_25.xlsx  spond_attendance_aug_24.xlsx  spond_attendance_aug_25.xlsx  spond_attendance_dec_24.xlsx  spond_attendance_dec_25.xlsx  spond_attendance_feb_24.xlsx  spond_attendance_feb_25.xlsx  spond_attendance_feb_26.xlsx  spond_attendance_jan_25.xlsx  spond_attendance_jan_26.xlsx  spond_attendance_jul_24.xlsx  spond_attendance_jul_25.xlsx  spond_attendance_jun_24.xlsx  spond_attendance_mar_24.xlsx  spond_attendance_mar_26.xlsx  spond_attendance_may_25.xlsx  spond_attendance_nov_24.xlsx  spond_attendance_oct_24.xlsx  spond_attendance_oct_25.xlsx  spond_attendance_sept_24.xlsx
emails/: 2025-01-example.md  2025-12-draft.md
output_data/: .spond_state.json  session_attendance.csv  session_name_mappings.csv  session_types.csv
src/spond_attendance/: cli.py  io.py  mapping.py  transform.py
tests/: test_integration.py  test_io.py  test_mapping.py  test_transform.py
