[project]
name = "spond-attendance"
version = "0.1.0"
description = "Process Spond attendance exports into tidy CSV files"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
]

[project.scripts]
spond-attendance = "spond_attendance.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spond_attendance"]
