[project]
name = "spond-attendance"
version = "0.1.0"
description = "Process Spond attendance exports into tidy CSV files"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "streamlit>=1.30",
    "plotly>=5.0",
]

[project.scripts]
spond-attendance = "spond_attendance.cli:main"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.9", "ty>=0.0.17"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spond_attendance"]
